--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 
 body {
     margin: 0;
+    font-family: 'ff-folk-rough';
     text-align: center;
     min-height: 100vh;
     max-height: 100vh;
